feat(boot): 新增统一应用启动入口与 SPI 扩展链 - 新增 hasor-boot-core 模块，提供 Boot、BootApplication 和 BootConfiguration 等统一启动 API - 引入 BootExtension 与 BootLauncher，通过 Java SPI 按顺序组装不同运行环境 - 新增 WebBootExtension，将 WebServer 创建、应用容器启动及资源关闭接入统一生命周期 - 为 Tomcat、Jetty 和 Undertow 补充统一启动集成测试 - 更新 Gradle、Maven 可执行包支持及 Boot 示例和使用文档 - 完善应用关闭、异常清理和 JVM Shutdown Hook 管理 - 统一项目源码的 Apache 许可证声明、导入顺序及基础代码格式